--- a/public/views/detalles.html
+++ b/public/views/detalles.html
@@ -89,6 +89,8 @@
                         <div ng-if="puja.usuario_id == user._id" ng-repeat="user in users">
                             <span>
                             Usuario {{user.google.name}} 
+                                    {{user.local.name}} 
+                                    {{user.facebook.name}}
                             <span class="m-l-3 m-r-6">|</span>
                             </span>
                         </div>
