--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,47 +1,33 @@
 <!-- views/login.ejs -->
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>Node Authentication</title>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
-	<style>
-		body 		{ padding-top:80px; }
-	</style>
+    <meta charset="UTF-8">
+    <title>Login</title>
+         <meta name="viewport" content="width-device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+      <link rel="stylesheet" type="text/css" href="stylesheets/estilos.css">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
 </head>
 <body>
-<div class="container">
-
-<div class="col-sm-6 col-sm-offset-3">
-
-	<h1><span class="fa fa-sign-in"></span> Login</h1>
-
-	<!-- show any messages that come back with authentication -->
-	<% if (message.length > 0) { %>
+    <br>
+    <br>
+    <br>
+    <% if (message.length > 0) { %>
 		<div class="alert alert-danger"><%= message %></div>
 	<% } %>
+    <form action="/login" method="post" class="form-login">
+        <h2 class="form_titulo">INGRESAR</h2>
+        <div class="contenedor-inputs">
+            <label for="correo">Correo</label>
+            <input type="email" name="email" placeholder="Correo electrónico" class="input-100" required>
 
-	<!-- LOGIN FORM -->
-	<form action="/login" method="post">
-		<div class="form-group">
-			<label>Email</label>
-			<input type="text" class="form-control" name="email">
-		</div>
-		<div class="form-group">
-			<label>Password</label>
-			<input type="password" class="form-control" name="password">
-		</div>
-
-		<button type="submit" class="btn btn-warning btn-lg">Login</button>
-	</form>
-
-	<hr>
-
-	<p>Need an account? <a href="/signup">Signup</a></p>
-	<p>Or go <a href="/">home</a>.</p>
-
-</div>
-
-</div>
+            <label for="correo">Contraseña</label>
+            <input type="password" name="password" placeholder="Contraseña" class="input-100" required>
+            <button type="submit" class="btn-enviar">Iniciar Sesión</button>
+            <p class="form_link">¿No tienes una cuenta? <a href="/signup">Ingresa aquí</a></p>
+            <p>O ir <a href="/">Inicio</a>.</p>
+        </div>
+    </form>
 </body>
 </html>
