--- a/views/pass.ejs
+++ b/views/pass.ejs
@@ -1,24 +1,244 @@
 <!-- views/index.ejs -->
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>Node Authentication</title>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
-	<style>
-		body 		{ padding-top:80px; }
-	</style>
+	<title>INICIO</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="fonts/themify/themify-icons.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="fonts/elegant-font/html-css/style.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+<!--===============================================================================================-->
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/slick/slick.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/lightbox2/css/lightbox.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="stylesheets/util.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+<!--===============================================================================================-->
+    
+    <script type="text/javascript" src="javascripts/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="javascripts/angular.min.js"></script>
+    <script type="text/javascript" src="javascripts/angular.min.js.map"></script>
+    <script type="text/javascript" src="javascripts/angular-ui-router.min.js"></script>
+    <script type="text/javascript" src="javascripts/angular-route.min.js.map"></script>
+    <script type="text/javascript" src="javascripts/appAngular.js"></script>
+<!--===============================================================================================-->
 </head>
-<body>
-<div class="container">
+    
+<body class="animsition" ng-app="appSubastas">
+	<header class="header1">
+		<!-- Header desktop -->
+		<div class="container-menu-header">
+			<div class="topbar">
+				<span class="topbar-child1">
+					Adquiere productos del Mundial Rusia 2018 a bajos precios
+				</span>
+			</div>
 
-	<div class="jumbotron text-center">
-		<h1><span class="fa fa-lock"></span> Node Authentication</h1>
+			<div class="wrap_header">
+				<!-- Logo -->
+				<a class="logo">
+					<img src="images/icons/logo.png" alt="IMG-LOGO">
+				</a>
 
-		<p>Login or Register with:</p>
-		<a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a>
-	</div>
+				<!-- Menu -->
+				<div class="wrap_menu">
+					<nav class="menu">
+						<ul class="main_menu">
+							<li>
+								<a ui-sref="inicio">INICIO</a>
+							</li>
 
-</div>
+							<li>
+								<a ui-sref="productos">SUBASTAS</a>
+							</li>
+						</ul>
+					</nav>
+				</div>
+
+                <div class="topbar-child2">
+	                 <!-- Header Icon -->
+                    <div class="header-icons">
+                        <div class="header-wrapicon2">
+                            <img src="images/icons/icon-header-01.png" class="header-icon1 js-show-header-dropdown" alt="ICON">
+
+                            <!-- Header cart noti -->
+                            <div class="header-cart header-dropdown">
+                                <div class="float-center">
+                                <h3 class="m-text2 t-center">
+                                    Iniciar Sesion
+                                </h3>
+                                    <br>
+                                    <center>
+                                        <a href="/login" class="btn btn-success"><span class="fa fa-user-o"></span> Login</a>
+                                    </center>
+                                <hr>
+                                <h3 class="m-text2 t-center">
+                                    Registrarse
+                                </h3>
+                                    <br>
+                                    <center>
+                                        <a href="/signup" class="btn btn-info"><span class="fa fa-user-o"></span></a>
+                                        <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span></a>
+                                        <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span></a>
+                                    </center>
+                                </div>
+                            </div>
+                        </div>
+                        <span class="linedivide1"></span>
+                    </div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Header Mobile -->
+		<div class="wrap_header_mobile">
+			<!-- Logo moblie -->
+			<a class="logo-mobile">
+				<img src="images/icons/logo.png" alt="IMG-LOGO">
+			</a>
+
+			<!-- Button show menu -->
+			<div class="btn-show-menu">
+				<!-- Header Icon mobile -->
+				<div class="header-icons-mobile">
+					<div class="header-wrapicon2">
+                        <img src="images/icons/icon-header-01.png" class="header-icon1 js-show-header-dropdown" alt="ICON">
+
+                        <!-- Header cart noti -->
+                        <div class="header-cart header-dropdown">
+                            <ul class="header-cart-wrapitem">
+                                <li class="header-cart-item">
+                                    <a href="/logout" class="btn btn-default btn-sm">Logout</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+					<span class="linedivide2"></span>
+
+					<div class="header-wrapicon2">
+						<img src="images/icons/icon-header-02.png" class="header-icon1 js-show-header-dropdown" alt="ICON">
+						<span class="header-icons-noti">0</span>
+
+						<!-- Header cart noti -->
+						<div class="header-cart header-dropdown">
+							<ul class="header-cart-wrapitem">
+								<li class="header-cart-item">
+									<div class="header-cart-item-img">
+										<img src="images/item-cart-01.jpg" alt="IMG">
+									</div>
+
+									<div class="header-cart-item-txt">
+										<a href="#" class="header-cart-item-name">
+											White Shirt With Pleat Detail Back
+										</a>
+
+										<span class="header-cart-item-info">
+											1 x $19.00
+										</span>
+									</div>
+								</li>
+
+								<li class="header-cart-item">
+									<div class="header-cart-item-img">
+										<img src="images/item-cart-02.jpg" alt="IMG">
+									</div>
+
+									<div class="header-cart-item-txt">
+										<a href="#" class="header-cart-item-name">
+											Converse All Star Hi Black Canvas
+										</a>
+
+										<span class="header-cart-item-info">
+											1 x $39.00
+										</span>
+									</div>
+								</li>
+
+								<li class="header-cart-item">
+									<div class="header-cart-item-img">
+										<img src="images/item-cart-03.jpg" alt="IMG">
+									</div>
+
+									<div class="header-cart-item-txt">
+										<a href="#" class="header-cart-item-name">
+											Nixon Porter Leather Watch In Tan
+										</a>
+
+										<span class="header-cart-item-info">
+											1 x $17.00
+										</span>
+									</div>
+								</li>
+							</ul>
+
+							<div class="header-cart-total">
+								Total: $75.00
+							</div>
+
+							<div class="header-cart-buttons">
+								<div class="header-cart-wrapbtn">
+									<!-- Button -->
+									<a href="cart.html" class="flex-c-m size1 bg1 bo-rad-20 hov1 s-text1 trans-0-4">
+										View Cart
+									</a>
+								</div>
+
+								<div class="header-cart-wrapbtn">
+									<!-- Button -->
+									<a href="#" class="flex-c-m size1 bg1 bo-rad-20 hov1 s-text1 trans-0-4">
+										Check Out
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="btn-show-menu-mobile hamburger hamburger--squeeze">
+					<span class="hamburger-box">
+						<span class="hamburger-inner"></span>
+					</span>
+				</div>
+			</div>
+		</div>
+
+		<!-- Menu Mobile -->
+		<div class="wrap-side-menu" >
+			<nav class="side-menu">
+				<ul class="main-menu">
+					<li class="item-menu-mobile">
+						<a ui-sref="inicio">INICIO</a>
+					</li>
+
+					<li class="item-menu-mobile">
+						<a ui-sref="productos">SUBASTAS</a>
+					</li>
+
+				</ul>
+			</nav>
+		</div>
+	</header>
+    
+    <div ui-view></div>
+    
 </body>
 </html>
