--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,45 +2,36 @@
 <!doctype html>
 <html>
 <head>
-	<title>Node Authentication</title>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
-	<style>
-		body 		{ padding-top:80px; }
-	</style>
+	<meta charset="UTF-8">
+    <title>Registrar</title>
+    <meta name="viewport" content="width-device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="stylesheets/estilos.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
 
-<div class="col-sm-6 col-sm-offset-3">
-
-	<h1><span class="fa fa-sign-in"></span> Signup</h1>
-
-	<!-- show any messages that come back with authentication -->
+    <!-- show any messages that come back with authentication -->
 	<% if (message.length > 0) { %>
 		<div class="alert alert-danger"><%= message %></div>
 	<% } %>
-
-	<!-- LOGIN FORM -->
-	<form action="/signup" method="post">
-		<div class="form-group">
-			<label>Email</label>
-			<input type="text" class="form-control" name="email">
-		</div>
-		<div class="form-group">
-			<label>Password</label>
-			<input type="password" class="form-control" name="password">
-		</div>
-
-		<button type="submit" class="btn btn-warning btn-lg">Signup</button>
-	</form>
-
-	<hr>
-
-	<p>Already have an account? <a href="/login">Login</a></p>
-	<p>Or go <a href="/">home</a>.</p>
-
-</div>
+    
+    <form action="/signup" method="post" class="form-register">
+    <h2 class="form_titulo">CREAR UNA CUENTA</h2>
+        <div class="contenedor-inputs">
+            <input type="text" name="name" placeholder="Nombres" class="input-48" required>
+            <input type="text" name="lastname" placeholder="Apellidos"  class="input-48" required>
+            <input type="email" name="email" placeholder="Correo" class="input-100" required>
+            <input type="password" name="password" placeholder="Contraseña" class="input-48" required>
+            <input type="text" name="telefono" placeholder="Teléfono" class="input-100" required>
+            <button type="submit" class="btn-enviar">Registrar</button>
+        </div>
+            <hr>
+        <center>
+            <p>¿Ya tienes una cuenta? <a href="/login">Iniciar Sesion</a></p>
+            <p>O ir <a href="/">inicio</a>.</p>
+        </center>
+    </form>
 
 </div>
 </body>
